<resources>
    <string name="title_activity_event__manager">Event_Manager</string>
    <string name="landscape_message">This is Landscape mode fragment</string>
    <string name="portrait_message">This is Portrait mode fragment</string>
    <string name="app_name">Arbitrea</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_wake_up">WakeUp</string>
    <string name="btn_phone_accept">Accept</string>
    <string name="btn_phone_decline">Decline</string>
    <string name="makeChoice">MAKE A CHOICE</string>
    <string name="text_minister_first_name">BARON BARTHOLOMEW</string>
    <string name="text_minister_last_name">THORP</string>
    <string name="jester_first_name">PESTY the</string>
    <string name="jester_last_name">JESTER</string>
    <string name="game_name">Arbitrea</string>
    <string name="death_headline">You DIED!</string>
    <string name="death_text">Sucker!</string>
    <string name="coronation_headline">Coronation</string>
    <string name="coronation_text">Sucker!</string>
    <string name="text_story_you_were">YOU WERE</string>
    <string name="text_story_assassinated">ASSASSINATED</string>
    <string name="text_intro_story_text_p1">Ruled by the Great king - your father. It was time of great prosperity and development. Kingdom expanded and was respected all over the continent.</string>
    <string name="text_intro_story_text_p2">When he was dying, all kingdom was mourning. And from now on, its going to be your responsibility. Will you be able continue where your father finished? Or are you gonna lead your kingdom to damnation?</string>
    <string name="text_outro_story_text_good">An unusual silence impregnates the streets of Arbitrea. The morning arrived with news of the passing of their beloved King. A gracious governor, who not only managed to fill in after the Great Kings death, but also one that won the respect and admiration of his people by his own right. A series of well thought decisions led the young King to a successful and lengthy rule.</string>
    <string name="text_outro_story_text_good_p2">The historians acknowledge your period as the golden age of the Kingdom of Arbitrea, securing that&#8230;</string>
    <string name="text_outro_story_text_bad">Your rule is over, a series of careless decisions slowly lead you towards this tragic outcome. As the head of state of the Kingdom of Arbitrea, you failed to achieve a balance for the needs of your people. Their frustration could not be contained any longer, and after plotting a clever scheme, an organized group of insurgents infiltrated your palace, with the aid of some of your most loyal men, and put an end to your life!</string>
    <string name="text_outro_story_text_bad_p2">Your thoughtless reign disappeared in the annals of history, ensuring that&#8230;</string>
    <string name="text_story_ranking_text">YOU WERE AS GOOD AS</string>
    <string name="text_story_king_is_dead">KING IS DEAD!</string>
    <string name="text_story_long_live_the_king">LONG LIVE THE KING!</string>
    <string name="text_story_you_will_be">YOU WILL BE</string>
    <string name="text_story_forgotten">FORGOTTEN!</string>
    <string name="text_story_your_rank_is">YOUR RANK IS</string>
    <string name="text_story_ranking">KING GEORGE II.</string>
    <string name="text_story_kingdom_of">KINGDOM of</string>
    <string name="text_story_arbitrea">ARBITREA</string>
    <string name="caller_name">Ministry of Agriculture</string>
    <string name="event_name">Fire in the city!</string>
    <string name="event_text">A fire started out in the most eastern district of the city My King and its getting out of control for the fire patrol and the townsfolk. The fire patrol seek your permission to open the eastern floodgate to quell the flames?</string>
    <string name="event_option_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus tristique mauris id posuere tempus.</string>
    <string name="event_option_2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus tristique mauris id posuere tempus.</string>
    <string name="event_option_3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus tristique mauris id posuere tempus.</string>
    <string name="event_option_4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus tristique mauris id posuere tempus.</string>
    <string name="title_activity_event_manager">EventManager</string>
    <string name="jester_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus tristique mauris id posuere tempus.</string>
</resources>